Fixed a lot of bugs regarding the ReliableAction system.